Ensuring tests could run with > airwallex@1.0.0 pretest /Users/jagan/code/airwallex > npm i && tsc
up to date in 0.282s

> airwallex@1.0.0 test /Users/jagan/code/airwallex
> jasmine

Randomized with seed 55481
Started

No specs found
Finished in 0.002 seconds
Incomplete: No specs found
Randomized with seed 55481 (jasmine --random=true --seed=55481).No tests yet.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "api tests",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "npm i && tsc",
+    "test": "./node_modules/.bin/jasmine"
   },
   "author": "",
   "license": "ISC",
