--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jasmine": "^2.8.7",
     "axios": "^0.18.0",
     "dotenv": "^5.0.1",
-    "jasmine": "^3.1.0"
+    "jasmine": "^3.1.0",
+    "tslint": "^5.10.0"
   }
 }
